fix no-wrap

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -54,6 +54,8 @@ body {
 }
 
 
+#right-side-wrapper-disabled { * { white-space: normal; } }
+
 
 
 /*************************************************
